--- a/lenses/static/lenses/css/lens_detail.css
+++ b/lenses/static/lenses/css/lens_detail.css
@@ -45,3 +45,16 @@
     padding:2px 5px;
 }
 
+
+.lens-summary {
+    text-align: left;
+}
+.lens-summary td {
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-top: 0px solid #ACACAC;
+}
+.lens-summary  td:first-child {
+    width: 200px;
+    color: #ACACAC;
+}​
