--- a/lenses/static/lenses/css/lens_query.css
+++ b/lenses/static/lenses/css/lens_query.css
@@ -118,3 +118,13 @@ input:checked + .slider:before {
   height: 130px;
   width: 350px;
 }
+
+
+.redshift-table {
+    width: fit-content;
+    margin: 0px auto;
+}
+.redshift-table td {
+    width: 1%;
+    white-space: nowrap;
+}
