--- a/sled_groups/templates/sled_groups/group_leave.html
+++ b/sled_groups/templates/sled_groups/group_leave.html
@@ -17,7 +17,7 @@ Leave group
 
 {% block action_button %}
 <button type="submit" class="jb-submit-button-1">
-  <img src="{% static 'icons/door-open-leave.svg' %}" >
+  <img src="{% static 'icons/door-open-fill.svg' %}" >
   Leave
 </button>
 {% endblock action_button %}
