--- a/sled_tasks/templates/sled_tasks/task_list.html
+++ b/sled_tasks/templates/sled_tasks/task_list.html
@@ -64,7 +64,16 @@
             <td>{{ task.recipients.all|join:", " }}</td>
 	    <td>
 	      {% if admin_page %}
+	      
 	      <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-admin-owner' task.id %}">
+		<img src="{% static 'icons/eye-fill.svg' %}">
+		View
+	      </button>
+
+	      {% else %}
+
+	      {% if task.task_type == 'MergeLenses' %}
+	      <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-merge-complete' task.id %}">
 		<img src="{% static 'icons/eye-fill.svg' %}">
 		View
 	      </button>
@@ -73,6 +82,8 @@
 		<img src="{% static 'icons/eye-fill.svg' %}">
 		View
 	      </button>
+	      {% endif %}
+
 	      {% endif %}
 	    </td>
           </tr>
