--- a/sled_tasks/templates/sled_tasks/task_list_recipient.html
+++ b/sled_tasks/templates/sled_tasks/task_list_recipient.html
@@ -62,11 +62,21 @@
         {% else %}
         
         {% if task.status == 'C' %}
+
+	{% if task.task_type == 'MergeLenses' %}
+	<button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-merge-complete' task.id %}">
+          <img src="{% static 'icons/eye-fill.svg' %}">
+          View
+	</button>
+	{% else %}	
 	<button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-recipient' task.id %}">
           <img src="{% static 'icons/eye-fill.svg' %}">
           View
 	</button>
-        {% else %}
+	{% endif %}
+	
+	{% else %}
+
 	{% if task.task_type == 'MergeLenses' %}
 	<form action="{% url 'sled_tasks:tasks-detail-merge' task.id %}">
 	  <button type="submit" class="jb-submit-button-1"> 
@@ -87,7 +97,8 @@
           Respond
 	</button>
         {% endif %}
-        {% endif %}
+
+	{% endif %}
 	
         {% endif %}
       </td>
