Fixed minor lingering bug from previous commit.

--- a/sled_tasks/templates/sled_tasks/task_list.html
+++ b/sled_tasks/templates/sled_tasks/task_list.html
@@ -72,7 +72,7 @@
 
 	      {% else %}
 
-	      {% if task.task_type == 'MergeLenses' %}
+	      {% if task.task_type == 'MergeLenses' and task.status == "C" %}
 	      <button type="button" id="view-task" class="sled-modal jb-submit-button-1" data-form-url="{% url 'sled_tasks:tasks-detail-merge-complete' task.id %}">
 		<img src="{% static 'icons/eye-fill.svg' %}">
 		View
