--- a/sled_tasks/templates/sled_tasks/task_merge_detail.html
+++ b/sled_tasks/templates/sled_tasks/task_merge_detail.html
@@ -2,6 +2,7 @@
 {% load static %}
 
 {% block content %}
+{% include "modal_container.html" %}
 <div class="jb-container">
   
   <table class="jb-table-no-lines">
@@ -129,6 +130,51 @@
     {% endif %}
     
 
+
+    {% if generic_images %}
+    <hr>
+    <div class="jb-section">
+
+      <table class="choose jb-table-no-lines">
+	<thead>
+	  <tr>
+	    <th>&nbsp;</th>
+	    <th rowspan="4"><h1 class="jb-heading-2">Generic Images</h1></th>
+	  </tr>
+	</thead>
+	<tbody>
+	  {% for generic_image in generic_images %}
+      	  <tr>
+	    <td>
+	      <input type="checkbox" name="items" value="GenericImage-{{generic_image.id}}">
+	    </td>
+
+	    <td>
+	      <div class="imaging-item">
+		<div class="header">
+		  {{ generic_image.name }}
+		</div>
+		<div class="container">
+		  <img src="{{ generic_image.image.url }}" width="170" height="170">
+		  <div class="overlay">
+		    <button type="button" class="sled-modal jb-overlay-button-1" data-form-url="{% url 'sled_data:generic-image-detail' generic_image.id %}">
+		      <img src="{% static 'icons/eye-fill.svg' %}">
+		      View
+		    </button>
+		  </div>
+		</div>
+	      </div>
+	    </td>
+		    
+	  </tr>
+	  {% endfor %}
+	</tbody>
+      </table>
+    </div>
+    {% endif %}
+
+
+    
     {% if imagings %}
     <hr>
     <div class="jb-section">
@@ -233,3 +279,22 @@
 {% block extrastyles %}
 <link href="{% static 'sled_tasks/css/task_merge_detail.css' %}" rel="stylesheet" />
 {% endblock extrastyles %}
+
+
+{% block extrascripts %}
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js" integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous"></script>
+<script type="text/javascript" src="{% static 'js/jquery.bootstrap.modal.forms.js' %}"></script>
+<script type="text/javascript">
+  $(document).ready(function(){
+      
+      // Modals
+      $(".sled-modal").each(function() {
+	  $(this).modalForm({
+              formURL: $(this).data("form-url"),
+              modalID: "#id-modal"
+	  });
+      });
+
+  });
+</script>
+{% endblock extrascripts %}
