--- a/sled_tasks/templates/sled_tasks/task_merge_detail.html
+++ b/sled_tasks/templates/sled_tasks/task_merge_detail.html
@@ -60,7 +60,7 @@
 	      {% if field.existing %}
 	      <b>{{key}}</b>: from <i>{{ field.existing }}</i> to <i>{{ field.new }}</i>
 	      {% else %}
-	      new value for <b>{{key}}</b>: <i>{{ field.new }}</i>
+	      New value for <b>{{key}}</b>: <i>{{ field.new }}</i>
 	      {% endif %}
 
 	      {% endif %}
