--- a/sled_tasks/templates/sled_tasks/task_detail_recipient.html
+++ b/sled_tasks/templates/sled_tasks/task_detail_recipient.html
@@ -77,6 +77,8 @@
       and would like to join the following <strong>{{object_type}}</strong>:
       {% elif task.task_type == "DeleteObject" %}
       and would like to delete the following <strong>{{object_type}}</strong>:
+      {% elif task.task_type == "AskPrivateAccess" %}
+      and would like to access the following <strong>{{object_type}}</strong>:
       {% endif %}
     </p>
     
@@ -106,6 +108,8 @@
     Would you like to accept this user as a group member?
     {% elif task.task_type == "DeleteObject" %}
     Do you approve deleting {{objects|pluralize:"this,these"}} <strong>{{object_type}}</strong>?
+    {% elif task.task_type == "AskPrivateAccess" %}
+    Do you accept?
     {% endif %}
   </p>
   
